# sort_animation

./: .gitignore  CMakeLists.txt
include/shuffle/: shuffle.h
include/sort/: sort.h
src/: CMakeLists.txt
src/assets/css/: CMakeLists.txt
src/main/: CMakeLists.txt  main.c
src/shuffle/: CMakeLists.txt  shuffle.c
src/sort/: CMakeLists.txt  sort.c
